--- a/employee_app/pubspec.yaml
+++ b/employee_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   email_validator: ^2.1.17
   cloud_firestore: ^4.8.4
   syncfusion_flutter_datepicker: ^22.2.7
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
